--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,3 +4,54 @@ nav {
   align-items: center;
   padding: 1rem;
 }
+
+#hamburger-icon {
+  width: 32px;
+  height: 24px;
+  transform: rotate(0deg);
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+#hamburger-icon span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 100%;
+  background: black;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: 0.25s ease-in-out;
+}
+
+#hamburger-icon span:nth-child(1) {
+  top: 0px;
+  transform-origin: left center;
+}
+
+#hamburger-icon span:nth-child(2) {
+  top: 10px;
+  transform-origin: left center;
+}
+
+#hamburger-icon span:nth-child(3) {
+  top: 20px;
+  transform-origin: left center;
+}
+
+#hamburger-icon.open span:nth-child(1) {
+  transform: rotate(45deg);
+  top: -3px;
+}
+
+#hamburger-icon.open span:nth-child(2) {
+  width: 0%;
+  opacity: 0;
+}
+
+#hamburger-icon.open span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: 20px;
+}
