--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,9 +5,14 @@ nav {
   padding: 1rem;
 }
 
+nav h2 {
+  font-weight: 400;
+  font-size: 1rem;
+}
+
 #hamburger-icon {
-  width: 32px;
-  height: 24px;
+  width: 26px;
+  height: 18px;
   transform: rotate(0deg);
   transition: 0.5s ease-in-out;
   cursor: pointer;
@@ -16,7 +21,7 @@ nav {
 #hamburger-icon span {
   display: block;
   position: absolute;
-  height: 4px;
+  height: 2px;
   width: 100%;
   background: black;
   border-radius: 9px;
@@ -32,18 +37,19 @@ nav {
 }
 
 #hamburger-icon span:nth-child(2) {
-  top: 10px;
+  top: 8px;
   transform-origin: left center;
 }
 
 #hamburger-icon span:nth-child(3) {
-  top: 20px;
+  top: 16px;
   transform-origin: left center;
 }
 
 #hamburger-icon.open span:nth-child(1) {
   transform: rotate(45deg);
-  top: -3px;
+  top: -2px;
+  left: 3px;
 }
 
 #hamburger-icon.open span:nth-child(2) {
@@ -53,5 +59,6 @@ nav {
 
 #hamburger-icon.open span:nth-child(3) {
   transform: rotate(-45deg);
-  top: 20px;
+  top: 16px;
+  left: 3px;
 }
