--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,6 +3,11 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  z-index: 50;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 6px;
 }
 
 nav h2 {
