--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,11 +2,11 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0.8rem;
   z-index: 50;
   position: fixed;
   background-color: white;
-  width: 100%;
+  width: 100vw;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 6px;
 }
 
