--- a/src/sections/Home.css
+++ b/src/sections/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
 .home {
   height: 100vh;
   background-image: url('../images/portada.jpg');
@@ -5,36 +7,70 @@
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
+  animation: scale 0.8s ease-in;
+  overflow: hidden;
+}
+
+@keyframes scale {
+  from {
+    transform: scale(1.4);
+  }
+}
+
+.black-background {
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 10%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .content {
   position: absolute;
   width: 65%;
   color: white;
-  left: 50%;
+  left: 40%;
   top: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  text-align: center;
-  gap: 1rem;
 }
 
 .content h1 {
-  font-size: 2rem;
+  font-size: 1rem;
+  font-family: 'Shadows Into Light', cursive;
+  color: var(--color-red);
+  opacity: 0;
+  animation: 0.8s ease-in 0.6s forwards appear;
 }
 
 .content p {
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1.4rem;
+  margin-bottom: 1rem;
+  opacity: 0;
+  animation: 0.8s ease-in 1s forwards appear;
 }
 
 .content button {
-  padding: 0.8rem 1.8rem;
+  padding: 1rem 1.8rem;
   width: fit-content;
-  align-self: center;
-  background-color: red;
+  background-color: var(--color-red);
   border: none;
   font-weight: 700;
   border-radius: 5px;
+  opacity: 0;
+  animation: 0.8s ease-in 1.4s forwards appear;
+}
+
+@keyframes appear {
+  from {
+    transform: translate(0, 5rem);
+  }
+  to {
+    opacity: 1;
+  }
 }
