--- a/src/sections/section1/Home.css
+++ b/src/sections/section1/Home.css
@@ -2,13 +2,12 @@
 
 .home {
   height: 100vh;
-  background-image: url('../images/portada.jpg');
+  background-image: url('../../images/portada.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
   animation: scale 0.8s ease-in;
-  overflow: hidden;
 }
 
 @keyframes scale {
