--- a/src/sections/section2/Programs.css
+++ b/src/sections/section2/Programs.css
@@ -3,11 +3,62 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+}
+
+.programs h2 {
+  font-family: 'Shadows Into Light', cursive;
+  color: var(--color-red);
+  font-size: 4rem;
 }
 
 .program-card {
   width: 80%;
-  padding: 1rem;
-  border: 1px solid black;
+  padding: 0.7rem;
+  background-size: cover;
+  height: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  margin-bottom: 2rem;
+}
+
+.programs .program-card:nth-child(2) {
+  background-image: url(../../images/crossfit.jpg);
+}
+
+.programs .program-card:nth-child(3) {
+  background-image: url(../../images/hiit.jpg);
+}
+
+.programs .program-card:nth-child(4) {
+  background-image: url(../../images/personal.jpg);
+}
+
+.card-info {
+  background-color: white;
+  border-radius: 8px;
+  padding: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.card-info h3 {
+  text-transform: uppercase;
+  font-size: 1.3rem;
+}
+
+.card-info p {
+  font-size: 0.8rem;
+  line-height: 1.2rem;
+}
+
+.card-info button {
+  text-transform: uppercase;
+  padding: 1rem 1.8rem;
+  /* width: fit-content; */
+  background-color: var(--color-red);
+  border: none;
+  font-weight: 700;
+  border-radius: 5px;
 }
