--- a/src/sections/section2/Programs.css
+++ b/src/sections/section2/Programs.css
@@ -18,7 +18,7 @@
   height: 25rem;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   margin-bottom: 2rem;
 }
 
