--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,7 +5,7 @@ nav {
   padding: 0.8rem;
   z-index: 50;
   position: fixed;
-  background-color: white;
+  background-color: black;
   width: 100vw;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 6px;
 }
@@ -13,6 +13,10 @@ nav {
 nav h2 {
   font-weight: 400;
   font-size: 1rem;
+}
+
+.logo {
+  height: 1rem;
 }
 
 #hamburger-icon {
@@ -28,7 +32,7 @@ nav h2 {
   position: absolute;
   height: 2px;
   width: 100%;
-  background: black;
+  background: white;
   border-radius: 9px;
   opacity: 1;
   left: 0;
