--- a/src/sections/section1/Home.css
+++ b/src/sections/section1/Home.css
@@ -37,9 +37,10 @@
 }
 
 .content h1 {
-  font-size: 1rem;
-  font-family: 'Shadows Into Light', cursive;
-  color: var(--color-red);
+  font-size: 1.2rem;
+  font-family: 'Anton', sans-serif;
+  color: white;
+  letter-spacing: 1.4px;
   opacity: 0;
   animation: 0.8s ease-in 0.6s forwards appear;
 }
@@ -53,10 +54,11 @@
 }
 
 .content button {
-  padding: 1rem 1.8rem;
+  padding: 0.5rem 1.2rem;
   width: fit-content;
-  background-color: var(--color-red);
-  border: none;
+  background-color: transparent;
+  color: white;
+  border: 3px solid var(--color-red);
   font-weight: 700;
   border-radius: 5px;
   opacity: 0;
