--- a/src/sections/section2/Programs.css
+++ b/src/sections/section2/Programs.css
@@ -6,9 +6,14 @@
 }
 
 .programs h2 {
-  font-family: 'Shadows Into Light', cursive;
-  color: var(--color-red);
-  font-size: 4rem;
+  /* color: var(--color-red); */
+  font-size: 2rem;
+}
+
+.programs > p {
+  width: 70%;
+  text-align: center;
+  margin: 1rem 0;
 }
 
 .program-card {
@@ -22,20 +27,20 @@
   margin-bottom: 2rem;
 }
 
-.programs .program-card:nth-child(2) {
+.programs .program-card:nth-child(3) {
   background-image: url(../../images/crossfit.jpg);
 }
 
-.programs .program-card:nth-child(3) {
+.programs .program-card:nth-child(4) {
   background-image: url(../../images/hiit.jpg);
 }
 
-.programs .program-card:nth-child(4) {
+.programs .program-card:nth-child(5) {
   background-image: url(../../images/personal.jpg);
 }
 
 .card-info {
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 8px;
   padding: 1.2rem;
   display: flex;
@@ -46,19 +51,22 @@
 .card-info h3 {
   text-transform: uppercase;
   font-size: 1.3rem;
+  color: white;
 }
 
 .card-info p {
   font-size: 0.8rem;
   line-height: 1.2rem;
+  font-weight: 500;
+  color: white;
 }
 
 .card-info button {
   text-transform: uppercase;
   padding: 1rem 1.8rem;
-  /* width: fit-content; */
-  background-color: var(--color-red);
-  border: none;
+  background-color: transparent;
+  color: white;
+  border: 3px solid var(--color-red);
   font-weight: 700;
   border-radius: 5px;
 }
