--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,7 @@ nav {
   background-color: black;
   width: 100vw;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 6px;
+  /* transform-style: preserve-3d; */
 }
 
 nav h2 {
@@ -70,4 +71,30 @@ nav h2 {
   transform: rotate(-45deg);
   top: 16px;
   left: 3px;
+}
+
+.nav-menu {
+  background-color: black;
+  color: white;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  padding: 2rem;
+  top: -100%;
+  left: 0;
+  /* right: -100%; */
+  transition: 350ms;
+  /* transform: translateZ(-10px); */
+  z-index: -1;
+}
+
+.nav-menu a {
+  color: white;
+}
+
+.nav-menu.activated {
+  top: 0;
+  transition: 350ms;
 }
