--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -20,7 +20,7 @@ nav h2 {
   height: 1rem;
 }
 
-#hamburger-icon {
+.hamburger-icon {
   width: 26px;
   height: 18px;
   transform: rotate(0deg);
@@ -28,7 +28,7 @@ nav h2 {
   cursor: pointer;
 }
 
-#hamburger-icon span {
+.hamburger-icon span {
   display: block;
   position: absolute;
   height: 2px;
@@ -41,33 +41,33 @@ nav h2 {
   transition: 0.25s ease-in-out;
 }
 
-#hamburger-icon span:nth-child(1) {
+.hamburger-icon span:nth-child(1) {
   top: 0px;
   transform-origin: left center;
 }
 
-#hamburger-icon span:nth-child(2) {
+.hamburger-icon span:nth-child(2) {
   top: 8px;
   transform-origin: left center;
 }
 
-#hamburger-icon span:nth-child(3) {
+.hamburger-icon span:nth-child(3) {
   top: 16px;
   transform-origin: left center;
 }
 
-#hamburger-icon.open span:nth-child(1) {
+.hamburger-icon.open span:nth-child(1) {
   transform: rotate(45deg);
   top: -2px;
   left: 3px;
 }
 
-#hamburger-icon.open span:nth-child(2) {
+.hamburger-icon.open span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
 
-#hamburger-icon.open span:nth-child(3) {
+.hamburger-icon.open span:nth-child(3) {
   transform: rotate(-45deg);
   top: 16px;
   left: 3px;
@@ -93,4 +93,25 @@ nav h2 {
 .nav-menu.activated {
   height: 100vh;
   transition: 850ms ease;
+}
+
+.nav-menu-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0;
+  gap: 2rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.nav-menu button {
+  padding: 0.5rem 1.2rem;
+  width: fit-content;
+  background-color: transparent;
+  color: white;
+  border: 3px solid var(--color-red);
+  font-weight: 600;
+  border-radius: 5px;
+  font-size: 1rem;
 }
