--- a/src/HomePage/section1/Home.css
+++ b/src/HomePage/section1/Home.css
@@ -7,7 +7,8 @@
 .home img {
   position: absolute;
   height: 100%;
-  transform: translateX(-7rem);
+  width: 100%;
+  object-fit: cover;
   z-index: -1;
 }
 
