--- a/src/HomePage/section2/Programs.css
+++ b/src/HomePage/section2/Programs.css
@@ -16,7 +16,7 @@
 }
 
 .program-card {
-  width: 80%;
+  /* width: 80%; */
   padding: 0.7rem;
   background-size: cover;
   height: 25rem;
@@ -25,17 +25,26 @@
   justify-content: flex-end;
   margin-bottom: 2rem;
   border-radius: 8px;
+  max-width: 30rem;
+  /* flex: none; */
 }
 
-.programs .program-card:nth-child(3) {
+.services {
+  width: 80%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.services .program-card:nth-child(1) {
   background-image: url(../../images/crossfit.jpg);
 }
 
-.programs .program-card:nth-child(4) {
+.services .program-card:nth-child(2) {
   background-image: url(../../images/hiit.jpg);
 }
 
-.programs .program-card:nth-child(5) {
+.services .program-card:nth-child(3) {
   background-image: url(../../images/personal.jpg);
 }
 
@@ -70,4 +79,15 @@
   font-weight: 700;
   border-radius: 5px;
   width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .services {
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .program-card {
+    flex: 1;
+  }
 }
