--- a/src/HomePage/section1/Home.css
+++ b/src/HomePage/section1/Home.css
@@ -77,3 +77,19 @@
     opacity: 1;
   }
 }
+
+@media (min-width: 1024px) {
+  .content h1 {
+    font-size: 2.5rem;
+  }
+
+  .content p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .content button {
+    padding: 0.5rem 1.2rem;
+    font-size: 1rem;
+  }
+}
