--- a/src/SchedulePage/SchedulePage.css
+++ b/src/SchedulePage/SchedulePage.css
@@ -41,7 +41,7 @@
 }
 
 .opengym {
-  background-color: #e80c7a;
+  background-color: #19a6ff;
 }
 
 .event:hover {
@@ -49,7 +49,7 @@
 }
 
 .opengym:hover {
-  background-color: #ff0dff;
+  background-color: #0971b3;
 }
 
 .empty {
