--- a/src/components/BenefitCard/BenefitCard.css
+++ b/src/components/BenefitCard/BenefitCard.css
@@ -44,9 +44,11 @@
 }
 
 .benefit-card h4 {
-  font-size: 1.8rem;
+  font-size: 3rem;
+  line-height: 2.5rem;
   font-weight: 800;
   text-transform: uppercase;
+  color: #19a6ff;
 }
 
 @media (min-width: 640px) {
