--- a/src/PricesPage/PricesPage.css
+++ b/src/PricesPage/PricesPage.css
@@ -2,4 +2,12 @@
   display: flex;
   margin: 10rem auto;
   width: 80%;
+  gap: 2rem;
+  flex-direction: column;
+}
+
+@media (min-width: 640px) {
+  .price-list {
+    flex-direction: row;
+  }
 }
