--- a/src/HomePage/section1/Home.css
+++ b/src/HomePage/section1/Home.css
@@ -41,10 +41,12 @@
 }
 
 .content h1 {
-  font-size: 1.2rem;
-  font-family: 'Anton', sans-serif;
+  font-size: 2rem;
+  font-family: 'League Spartan', sans-serif;
+  font-weight: 900;
+  line-height: 1.5rem;
   color: white;
-  letter-spacing: 1.4px;
+  letter-spacing: -1px;
   opacity: 0;
   animation: 0.8s ease-in 0.6s forwards appear;
 }
