--- a/src/HomePage/section5/Footer.css
+++ b/src/HomePage/section5/Footer.css
@@ -24,4 +24,10 @@
 
 .icon {
   color: white;
+  transition-duration: 0.3s;
+}
+
+.icon:hover {
+  transform: scale(1.2);
+  transition-duration: 0.3s;
 }
