--- a/src/HomePage/section1/Home.css
+++ b/src/HomePage/section1/Home.css
@@ -49,6 +49,7 @@
   letter-spacing: -1px;
   opacity: 0;
   animation: 0.8s ease-in 0.6s forwards appear;
+  text-transform: uppercase;
 }
 
 .content p {
@@ -69,6 +70,12 @@
   border-radius: 50px;
   opacity: 0;
   animation: 0.8s ease-in 1.4s forwards appear;
+  transition-duration: 0.3s;
+}
+
+.content button:hover {
+  box-shadow: 0px 0px 30px 0px var(--color-red);
+  transition-duration: 0.3s;
 }
 
 @keyframes appear {
@@ -82,16 +89,20 @@
 
 @media (min-width: 1024px) {
   .content h1 {
-    font-size: 2.5rem;
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    max-width: 32rem;
+    line-height: 3rem;
   }
 
   .content p {
     font-size: 1.5rem;
     line-height: 2rem;
+    max-width: 44rem;
   }
 
   .content button {
-    padding: 0.5rem 1.2rem;
-    font-size: 1rem;
+    padding: 1rem 1.5rem;
+    font-size: 1.5rem;
   }
 }
