--- a/src/HomePage/section2/Programs.css
+++ b/src/HomePage/section2/Programs.css
@@ -81,12 +81,17 @@
   text-transform: uppercase;
   padding: 1rem 1.8rem;
   background-color: transparent;
-  /* background-color: var(--color-red); */
   color: white;
   border: 2px solid var(--color-red);
   font-weight: 700;
   border-radius: 5px;
   width: 100%;
+  transition-duration: 0.5s;
+}
+
+.card-info button:hover {
+  background-color: var(--color-red);
+  transition-duration: 0.5s;
 }
 
 @media (min-width: 1024px) {
@@ -97,5 +102,27 @@
 
   .program-card {
     flex: 1;
+  }
+
+  .programs h2 {
+    font-size: 1.5rem;
+  }
+
+  .programs > p {
+    font-size: 2.5rem;
+    margin: 2.5rem 0;
+    max-width: 55rem;
+  }
+
+  .card-info h3 {
+    font-size: 2rem;
+  }
+
+  .card-info p {
+    font-size: 1rem;
+  }
+
+  .card-info button {
+    font-size: 1rem;
   }
 }
