--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -113,4 +113,10 @@ nav h2 {
   font-weight: 600;
   border-radius: 50px;
   font-size: 1rem;
+  transition-duration: 0.3s;
+}
+
+.nav-menu button:hover {
+  box-shadow: 0px 0px 30px 0px var(--color-red);
+  transition-duration: 0.3s;
 }
