--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -120,3 +120,61 @@ nav h2 {
   box-shadow: 0px 0px 30px 0px var(--color-red);
   transition-duration: 0.3s;
 }
+
+.desktop-links {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  nav {
+    padding: 1.5rem 7.5%;
+  }
+
+  .logo {
+    height: 1.6rem;
+  }
+
+  .links {
+    display: none;
+  }
+
+  .desktop-links {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    gap: 1rem;
+    font-size: 0.9rem;
+  }
+
+  .desktop-links a,
+  .desktop-links a:visited {
+    color: white;
+  }
+
+  .desktop-links li:first-child {
+    display: none;
+  }
+
+  .desktop-links button {
+    padding: 0.6rem 1.2rem;
+    width: fit-content;
+    background-color: transparent;
+    color: white;
+    border: 2px solid var(--color-red);
+    font-weight: 700;
+    border-radius: 50px;
+    transition-duration: 0.3s;
+    font-size: 0.9rem;
+    font-weight: 600;
+  }
+
+  .desktop-links button:hover {
+    box-shadow: 0px 0px 30px 0px var(--color-red);
+    transition-duration: 0.3s;
+  }
+
+  .nav-menu {
+    display: none;
+  }
+}
