--- a/src/components/BenefitCard/BenefitCard.css
+++ b/src/components/BenefitCard/BenefitCard.css
@@ -15,13 +15,13 @@
   flex-direction: column;
   align-items: center;
   gap: 4rem;
-  width: 90%;
+  width: 95%;
 }
 
 .benefit-card {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 90%;
   gap: 1rem;
   align-items: center;
   text-align: center;
@@ -44,11 +44,36 @@
 }
 
 .benefit-card h4 {
-  font-size: 3rem;
+  font-size: 2.7rem;
   line-height: 2.5rem;
   font-weight: 800;
   text-transform: uppercase;
-  color: #19a6ff;
+  font-family: 'League Spartan', sans-serif;
+  letter-spacing: -3px;
+  margin-left: 0.5rem;
+}
+
+.benefit-card p {
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+}
+
+.title {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.benefit-card:nth-child(1) h4:nth-child(4) {
+  color: red;
+}
+
+.benefit-card:nth-child(2) h4:nth-child(5) {
+  color: red;
+}
+
+.benefit-card:nth-child(3) h4:nth-child(3) {
+  color: red;
 }
 
 @media (min-width: 640px) {
@@ -71,7 +96,7 @@
     flex: 3;
   }
 
-  .benefit-card:nth-child(even) div:first-child {
-    order: 2;
+  .benefit-card:nth-child(even) div:last-child {
+    order: -1;
   }
 }
