--- a/src/OpenGymPage/OpenGymPage.css
+++ b/src/OpenGymPage/OpenGymPage.css
@@ -45,3 +45,12 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: var(--color-red) !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--color-red) !important;
+}
