--- a/src/SchedulePage/SchedulePage.css
+++ b/src/SchedulePage/SchedulePage.css
@@ -18,7 +18,7 @@
   margin: 2rem 0;
   width: 90%;
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   grid-template-rows: 2rem repeat(12, 5rem);
   gap: 0.2rem;
 }
@@ -81,6 +81,10 @@
   /* background-color: var(--color-gray); */
   background-color: black;
   border: none;
+}
+
+.grid-container div:nth-child(8n) {
+  display: none;
 }
 
 @media (max-width: 640px) {
