--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -125,6 +125,36 @@ nav h2 {
   display: none;
 }
 
+.active {
+  text-decoration: underline;
+  text-decoration-color: var(--color-red);
+  text-decoration-thickness: 2px;
+}
+
+.underline-hover {
+  display: inline-block;
+  position: relative;
+  color: var(--color-red);
+}
+
+.underline-hover::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-red);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.underline-hover:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
 @media (min-width: 1024px) {
   nav {
     padding: 1.3rem 7.5%;
