--- a/src/HomePage/section2/Programs.css
+++ b/src/HomePage/section2/Programs.css
@@ -94,13 +94,27 @@
   transition-duration: 0.5s;
 }
 
+@media (prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
+
 .hidden {
   opacity: 0;
+  filter: blur(5px);
+  transform: translateY(100%);
   transition: all 1s;
 }
 
 .show {
   opacity: 1;
+  filter: blur(0);
+  transform: translate(0);
+}
+
+.card-info {
+  transition-delay: 0.3s;
 }
 
 @media (min-width: 1024px) {
