--- a/src/HomePage/section1/Home.css
+++ b/src/HomePage/section1/Home.css
@@ -65,20 +65,21 @@
 }
 
 .content button {
-  padding: 0.6rem 1.2rem;
+  padding: 0.8rem 1rem;
   width: fit-content;
   background-color: transparent;
   color: white;
   border: 2px solid var(--color-red);
   font-weight: 700;
-  border-radius: 50px;
+  border-radius: 5px;
   opacity: 0;
   animation: 0.8s ease-in 1.4s forwards appear;
   transition-duration: 0.3s;
 }
 
 .content button:hover {
-  box-shadow: 0px 0px 30px 0px var(--color-red);
+  /* box-shadow: 0px 0px 30px 0px var(--color-red); */
+  background-color: var(--color-red);
   transition-duration: 0.3s;
 }
 
