--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -105,19 +105,20 @@ nav h2 {
 }
 
 .nav-menu button {
-  padding: 0.5rem 1.2rem;
+  padding: 0.8rem 1.2rem;
   width: fit-content;
   background-color: transparent;
   color: white;
   border: 2px solid var(--color-red);
   font-weight: 600;
-  border-radius: 50px;
+  border-radius: 5px;
   font-size: 1rem;
   transition-duration: 0.3s;
 }
 
 .nav-menu button:hover {
-  box-shadow: 0px 0px 30px 0px var(--color-red);
+  /* box-shadow: 0px 0px 30px 0px var(--color-red); */
+  background-color: var(--color-red);
   transition-duration: 0.3s;
 }
 
@@ -193,14 +194,14 @@ nav h2 {
     color: white;
     border: 2px solid var(--color-red);
     font-weight: 700;
-    border-radius: 50px;
+    border-radius: 5px;
     transition-duration: 0.3s;
     font-size: 0.9rem;
     font-weight: 600;
   }
 
   .desktop-links button:hover {
-    box-shadow: 0px 0px 30px 0px var(--color-red);
+    background-color: var(--color-red);
     transition-duration: 0.3s;
   }
 
