add animation to title in the home page

--- a/src/HomePage/section2/Programs.css
+++ b/src/HomePage/section2/Programs.css
@@ -117,6 +117,10 @@
   transition-delay: 0.3s;
 }
 
+.programs > p {
+  transition-delay: 200ms;
+}
+
 @media (min-width: 1024px) {
   .services {
     flex-direction: row;
